*  [ 1655181 ] clean up history log entries
*  [ 1659713 ] Java Exception
*  [ 1661095 ] MovePanel should dynamically select best units for route
*  [ 1662464 ] null pointer exception when skipping move phase
*  [ 1662938 ] shadow units don't appear in map overlap sections
*  [ 1671750 ] improve logic for transport load order
*  [ 1672743 ] exceptions thrown by delegates get mangled by proxy

* feature [ 1746894 ] Save Screenshot feature (tclayton)

* feature [ 1673208 ] show move validation warnings/errors when moving mouse (tclayton)

* feature [ 1661088 ] code cleanup - implement MovePanel getMovableMatch() method (tclayton)

* new revised map (zero  pilot)

* in revised, remove connection between 25 Sea Zone and 43 Sea Zone (zero pilot)

* new vc image (zero pilot)

* japanese tanks defend at 2 in pacific (comradekev)

* non jopanese units defend at 1 in first round of pacific (comradekev)

* fix empty sea zone in gulf of mexico in classic,battleship_row,four_if_by_sea,and iron_blitz (Scarbrow)

* four if by sea turn order changed (Scarbrow, rodthegod)

* add attack/defense/movement to production panel (gansito)

* move test classes to test directory (sgb)

* add export game setup charts menu (gansito)

* show battle casualties in battle display (ahmet)

* mark remote players as remote (ahmet)

* allow multiple canals per sea zone (tekkyy)

* allow centering map on battles (ahmet)

* alt mouse scroll zooms the map in and out (ahmet)

* new unit images (lssah)

* add moderator functions, moderators can boot players, change passwords, and ban ip addresses (sgb)

* better logic for determining attacker defender in odds calculator (Gansito)

* add uninstaller (Gansito)

* allow odds calculator to specify simulation count (Gansito)

* banned ips and banned words are stored in lobby database (sgb)

* the lobby server can now ban ip address (sgb)

* add serialversionuid's to several classes (dagon)

* add unit icon to unit images on the territory tab (dagon)
